# Image_processor

./: CMakeLists.txt  ColorPixel.cpp  ColorPixel.h  factory.cpp  factory.h  image.cpp  image.h  image_processor.cpp  parser.h  readme.md  test.cpp
filters/: BaseFilter.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GlassDistortionFilter.cpp  GlassDistortionFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  MatrixBaseFilter.cpp  MatrixBaseFilter.h  NegFilter.cpp  NegFilter.h  SharpFilter.cpp  SharpFilter.h
